<resources>
    <string name="app_name">oh_nat_foods_order</string>
    <string name="title">Oh Natural Foods Preordering</string>
    <string name="barLogin">LOGIN</string>
    <string name="barAccount">ACCOUNT</string>
    <string name="barHome">HOME</string>

    <string name="detailProduct">Product</string>
    <string name="detailDesc">This is a description of a product that does not exist.</string>
    <string name="detailCustom">Choose an Option:</string>
    <string-array name="detailCustomArray">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
    </string-array>
    <string name="detailComment">Extra Comments</string>
    <string name="detailAddCart">Add to Cart</string>
    <string name="detailBack">Back</string>
    <string name="detailQty">Choose Quantity</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_prompt">Don\'t have an account? Register here.</string>
    <string name="name_hint">Name</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account? Log in.</string>

    <string name="ordersCart">VIEW CART</string>
    <string name="ordersProductName">Product</string>
    <string name="ordersProductPrice">$0.00</string>

    <string name="cartMyCart">My Cart</string>
    <string name="cartRemoveProduct">Remove</string>
    <string name="cartQty">Qty: 1</string>
    <string name="cartPrice">$0.00</string>
    <string name="cartTax">GST: 0.00</string>
    <string name="cartSubtotal">Subtotal: $0.00</string>
    <string name="cartTotal">Total: $0.00</string>
    <string name="cartCheckout">CHECKOUT</string>
    <string-array name="detailQtyArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="myOrdersOrders">My Orders</string>
    <string name="myOrderNum">Order#1111</string>
    <string name="myOrderQueue"># in Queue: 1</string>
    <string name="myOrderCancel">Cancel Order</string>
    <string name="myOrderPickup">Confirm Pickup</string>

    <string name="add_payment_method_title">Add Payment Method</string>
    <string name="card_number_hint">Card Number</string>
    <string name="expiry_date_hint">Exp. Date (MMYY)</string>
    <string name="cvv_hint">CVV</string>
    <string name="country_hint">Country</string>
    <string name="postal_code_hint">Postal Code</string>

    <string-array name="country_array">
        <item>Canada</item>
        <item>United States</item>
        <item>United Kingdom</item>
        <item>Germany</item>
        <item>Japan</item>
        <item>Australia</item>
        <item>France</item>
        <item>Brazil</item>
        <item>India</item>
        <item>South Africa</item>
        <item>Future countries to implement</item>
    </string-array>
</resources>