<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cart">

    <ImageView
        android:id="@+id/main_logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ohnaturalfoodsicon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <!-- Title below the logo -->
    <TextView
        android:id="@+id/main_titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Oh Natural Foods Preordering"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#046305"
        app:layout_constraintTop_toBottomOf="@id/main_logoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/cartBackButton"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="185dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="596dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="125dp"
        android:backgroundTint="#828882"
        android:text="@string/detailBack"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cartCheckoutButton"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="185dp"
        android:layout_height="60dp"
        android:layout_marginStart="203dp"
        android:layout_marginTop="596dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="125dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/cartCheckout"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cartBottomBar"
        android:layout_width="415dp"
        android:layout_height="70dp"
        android:background="#EFEF5B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cartLogButton"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:onClick="onLogin"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/barLogin"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/cartHomeButton"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:onClick="onHome"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/barHome"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cartAccountButton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginStart="128dp"
        android:onClick="onLogin"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/barAccount"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/cartProductView"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="175dp"
        android:background="@drawable/border2"
        android:scrollbarStyle="insideInset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/cartSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/cartProductHolder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/cartProductNameHolder"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/cartProductName1Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ordersProductName"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <!-- Add additional views for products as needed -->
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cartProductQuantityHolder"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/cartQty1Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cartQty"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <!-- Add additional views for products as needed -->
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cartProductPriceHolder"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/cartProductPrice1Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cartPrice"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <!-- Add additional views for products as needed -->
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cartRemove"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/cartRemove1Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cartRemoveProduct"
                        android:textColor="#046305"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <!-- Add additional views for products as needed -->
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/cartSubtotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/cartSubtotal"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cartTax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/cartTax"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cartTotal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/cartTotal"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/cartCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="305dp"
        android:layout_marginBottom="588dp"
        android:fontFamily="serif"
        android:text="@string/cartMyCart"
        android:textColor="#046305"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>