<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".addPaymentMethod">


    <ImageView
        android:id="@+id/addPaymentMethodLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ohnaturalfoodsicon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>


    <TextView
        android:id="@+id/paymentMethodsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Oh Natural Foods Preordering"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#046305"
        app:layout_constraintTop_toBottomOf="@id/addPaymentMethodLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>


    <EditText
        android:id="@+id/cardNumberEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/card_number_hint"
        android:inputType="number"
        android:maxLength="16"
        app:layout_constraintTop_toBottomOf="@id/paymentMethodsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>


    <LinearLayout
        android:id="@+id/expiryCVVLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/cardNumberEditText"
        app:layout_constraintStart_toStartOf="@id/cardNumberEditText"
        app:layout_constraintEnd_toEndOf="@id/cardNumberEditText"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/expiryDateEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/expiry_date_hint"
            android:inputType="number"
            android:maxLength="4"
            android:layout_marginEnd="8dp"/>

        <EditText
            android:id="@+id/cvvEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/cvv_hint"
            android:inputType="number"
            android:maxLength="3"
            android:layout_marginStart="8dp"/>
    </LinearLayout>




    <Spinner
        android:id="@+id/countrySpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/expiryCVVLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>


    <EditText
        android:id="@+id/postalCodeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/postal_code_hint"
        android:inputType="textPostalAddress"
        android:maxLength="6"
        app:layout_constraintTop_toBottomOf="@id/countrySpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>


    <Button
        android:id="@+id/submitPaymentMethodButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_payment_method_title"
        android:backgroundTint="#4CAF50"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/postalCodeEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
