<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/myOrdersOrderHolder"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/MyOrdersNumHolder"
            android:layout_width="125dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:gravity="center">

            <TextView
                android:id="@+id/myOrdersNum1Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/myOrderNum"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/myOrdersQueueHolder"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:gravity="center">

            <TextView
                android:id="@+id/myOrdersQueueText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/myOrderQueue"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/myOrdersStatusHolder"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            android:gravity="center">

            <TextView
                android:id="@+id/myOrdersStatusText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/myOrderCancel"
                android:textColor="#046305"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>